--- a/src/components/recipesCards/page.module.css
+++ b/src/components/recipesCards/page.module.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 280px;
+  width: 250px;
   -webkit-box-shadow: 3px 3px 10px 3px #dddddd;
   -moz-box-shadow: 3px 3px 10px 3px #dddddd;
   box-shadow: 3px 3px 10px 3px #dddddd;
